--- a/cf/cognito-case-insensitive.yaml
+++ b/cf/cognito-case-insensitive.yaml
@@ -11,9 +11,6 @@ Parameters:
       - production
     Description: The environment for which the buckets need to be created.
 
-Conditions:
-  isProd: !Equals [!Ref Environment, "production"]
-
 Outputs:
   UserPoolId:
     Value: !Ref UserPool
@@ -105,6 +102,7 @@ Resources:
     Type: AWS::Cognito::UserPool
     Properties:
       UserPoolName: !Sub "biomage-user-pool-case-insensitive-${Environment}"
+      DeletionProtection: ACTIVE
       AccountRecoverySetting:
         RecoveryMechanisms:
           - Name: verified_email
