--- a/cf/s3-v2.yaml
+++ b/cf/s3-v2.yaml
@@ -14,6 +14,7 @@ Parameters:
 Resources:
   PlotsTablesBucket:
     Type: AWS::S3::Bucket
+    DeletionPolicy: Retain
     Properties:
       BucketName: !Sub "plots-tables-${Environment}-${AWS::AccountId}"
       PublicAccessBlockConfiguration:
@@ -24,7 +25,7 @@ Resources:
       BucketEncryption:
         ServerSideEncryptionConfiguration:
           - ServerSideEncryptionByDefault:
-              SSEAlgorithm: 'aws:kms'
+              SSEAlgorithm: "aws:kms"
             BucketKeyEnabled: true
       VersioningConfiguration:
         Status: Enabled
@@ -38,6 +39,7 @@ Resources:
 
   CellSetsBucket:
     Type: AWS::S3::Bucket
+    DeletionPolicy: Retain
     Properties:
       BucketName: !Sub "cell-sets-${Environment}-${AWS::AccountId}"
       PublicAccessBlockConfiguration:
@@ -48,7 +50,7 @@ Resources:
       BucketEncryption:
         ServerSideEncryptionConfiguration:
           - ServerSideEncryptionByDefault:
-              SSEAlgorithm: 'aws:kms'
+              SSEAlgorithm: "aws:kms"
             BucketKeyEnabled: true
       VersioningConfiguration:
         Status: Enabled
@@ -62,6 +64,7 @@ Resources:
 
   WorkerResultsBucket:
     Type: AWS::S3::Bucket
+    DeletionPolicy: Retain
     Properties:
       BucketName: !Sub "worker-results-${Environment}-${AWS::AccountId}"
       PublicAccessBlockConfiguration:
@@ -72,7 +75,7 @@ Resources:
       BucketEncryption:
         ServerSideEncryptionConfiguration:
           - ServerSideEncryptionByDefault:
-              SSEAlgorithm: 'aws:kms'
+              SSEAlgorithm: "aws:kms"
             BucketKeyEnabled: true
       LifecycleConfiguration:
         Rules:
@@ -88,7 +91,7 @@ Resources:
       CorsConfiguration:
         CorsRules:
           - AllowedHeaders:
-              - '*'
+              - "*"
             ExposedHeaders:
               - ETag
               - "x-amz-server-side-encryption"
@@ -100,11 +103,12 @@ Resources:
               - POST
               - DELETE
             AllowedOrigins:
-              - '*'
+              - "*"
             Id: uiHeadersRule
 
   PipelineResultBucket:
     Type: AWS::S3::Bucket
+    DeletionPolicy: Retain
     Properties:
       BucketName: !Sub "processed-matrix-${Environment}-${AWS::AccountId}"
       PublicAccessBlockConfiguration:
@@ -115,7 +119,7 @@ Resources:
       BucketEncryption:
         ServerSideEncryptionConfiguration:
           - ServerSideEncryptionByDefault:
-              SSEAlgorithm: 'aws:kms'
+              SSEAlgorithm: "aws:kms"
             BucketKeyEnabled: true
       VersioningConfiguration:
         Status: Enabled
@@ -131,6 +135,7 @@ Resources:
   # Indexed by experimentId and timestamp
   PipelineDebugBucket:
     Type: AWS::S3::Bucket
+    DeletionPolicy: Retain
     Properties:
       BucketName: !Sub "biomage-pipeline-debug-${Environment}-${AWS::AccountId}"
       PublicAccessBlockConfiguration:
@@ -141,17 +146,18 @@ Resources:
       BucketEncryption:
         ServerSideEncryptionConfiguration:
           - ServerSideEncryptionByDefault:
-              SSEAlgorithm: 'aws:kms'
+              SSEAlgorithm: "aws:kms"
             BucketKeyEnabled: true
       LifecycleConfiguration:
         Rules:
-        - Id: DeleteObjectAfter10Days
-          Status: Enabled
-          ExpirationInDays: 10
+          - Id: DeleteObjectAfter10Days
+            Status: Enabled
+            ExpirationInDays: 10
 
   # The bucket that contains the count matrix files (in .rds format) used for the experiments.
   SourceBucket:
     Type: AWS::S3::Bucket
+    DeletionPolicy: Retain
     Properties:
       BucketName: !Sub "biomage-source-${Environment}-${AWS::AccountId}"
       PublicAccessBlockConfiguration:
@@ -162,7 +168,7 @@ Resources:
       BucketEncryption:
         ServerSideEncryptionConfiguration:
           - ServerSideEncryptionByDefault:
-              SSEAlgorithm: 'aws:kms'
+              SSEAlgorithm: "aws:kms"
             BucketKeyEnabled: true
       VersioningConfiguration:
         Status: "Enabled"
@@ -178,6 +184,7 @@ Resources:
   # Indexed by experimentId
   FilteredCellsBucket:
     Type: AWS::S3::Bucket
+    DeletionPolicy: Retain
     Properties:
       BucketName: !Sub "biomage-filtered-cells-${Environment}-${AWS::AccountId}"
       PublicAccessBlockConfiguration:
@@ -188,7 +195,7 @@ Resources:
       BucketEncryption:
         ServerSideEncryptionConfiguration:
           - ServerSideEncryptionByDefault:
-              SSEAlgorithm: 'aws:kms'
+              SSEAlgorithm: "aws:kms"
             BucketKeyEnabled: true
       VersioningConfiguration:
         Status: Enabled
@@ -202,6 +209,7 @@ Resources:
 
   BackupsBucket:
     Type: AWS::S3::Bucket
+    DeletionPolicy: Retain
     Properties:
       BucketName: !Sub "biomage-backups-${Environment}-${AWS::AccountId}"
       PublicAccessBlockConfiguration:
@@ -212,7 +220,7 @@ Resources:
       BucketEncryption:
         ServerSideEncryptionConfiguration:
           - ServerSideEncryptionByDefault:
-              SSEAlgorithm: 'aws:kms'
+              SSEAlgorithm: "aws:kms"
             BucketKeyEnabled: true
       VersioningConfiguration:
         Status: "Enabled"
@@ -230,6 +238,7 @@ Resources:
   # The bucket that contains the unfiltered versions of the count matrix files as uploaded by the user.
   OriginalFilesBucket:
     Type: AWS::S3::Bucket
+    DeletionPolicy: Retain
     Properties:
       BucketName: !Sub "biomage-originals-${Environment}-${AWS::AccountId}"
       PublicAccessBlockConfiguration:
@@ -240,7 +249,7 @@ Resources:
       BucketEncryption:
         ServerSideEncryptionConfiguration:
           - ServerSideEncryptionByDefault:
-              SSEAlgorithm: 'aws:kms'
+              SSEAlgorithm: "aws:kms"
             BucketKeyEnabled: true
       VersioningConfiguration:
         Status: "Enabled"
@@ -254,7 +263,7 @@ Resources:
       CorsConfiguration:
         CorsRules:
           - AllowedHeaders:
-              - '*'
+              - "*"
             ExposedHeaders:
               - ETag
               - "x-amz-server-side-encryption"
@@ -266,6 +275,5 @@ Resources:
               - POST
               - DELETE
             AllowedOrigins:
-              - '*'
+              - "*"
             Id: uiHeadersRule
-            
