--- a/cf/s3-v2.yaml
+++ b/cf/s3-v2.yaml
@@ -14,6 +14,7 @@ Parameters:
 Resources:
   PlotsTablesBucket:
     Type: AWS::S3::Bucket
+    DeletionPolicy: Retain
     Properties:
       BucketName: !Sub "plots-tables-${Environment}-${AWS::AccountId}"
       PublicAccessBlockConfiguration:
@@ -24,7 +25,7 @@ Resources:
       BucketEncryption:
         ServerSideEncryptionConfiguration:
           - ServerSideEncryptionByDefault:
-              SSEAlgorithm: 'aws:kms'
+              SSEAlgorithm: "aws:kms"
             BucketKeyEnabled: true
       VersioningConfiguration:
         Status: Enabled
@@ -35,9 +36,28 @@ Resources:
           - Id: PreserveThenDeleteNonCurrentVersion
             Status: "Enabled"
             NoncurrentVersionExpirationInDays: 7
+  PlotsTablesBucketPolicy:
+    Type: 'AWS::S3::BucketPolicy'
+    Properties:
+      Bucket: !Ref PlotsTablesBucket
+      PolicyDocument:
+        Id: SslOnlyAccess
+        Version: '2012-10-17'
+        Statement:
+          - Sid: AllowSSLRequestsOnly
+            Action:
+              - 's3:*'
+            Effect: Deny
+            Resource:
+              - !Sub 'arn:aws:s3:::${PlotsTablesBucket}/*'
+            Principal: '*'
+            Condition:
+              Bool:
+                'aws:SecureTransport': 'false'
 
   CellSetsBucket:
     Type: AWS::S3::Bucket
+    DeletionPolicy: Retain
     Properties:
       BucketName: !Sub "cell-sets-${Environment}-${AWS::AccountId}"
       PublicAccessBlockConfiguration:
@@ -48,7 +68,7 @@ Resources:
       BucketEncryption:
         ServerSideEncryptionConfiguration:
           - ServerSideEncryptionByDefault:
-              SSEAlgorithm: 'aws:kms'
+              SSEAlgorithm: "aws:kms"
             BucketKeyEnabled: true
       VersioningConfiguration:
         Status: Enabled
@@ -59,9 +79,27 @@ Resources:
           - Id: PreserveThenDeleteNonCurrentVersion
             Status: "Enabled"
             NoncurrentVersionExpirationInDays: 7
-
+  CellSetsBucketPolicy:
+    Type: 'AWS::S3::BucketPolicy'
+    Properties:
+      Bucket: !Ref CellSetsBucket
+      PolicyDocument:
+        Id: SslOnlyAccess
+        Version: '2012-10-17'
+        Statement:
+          - Sid: AllowSSLRequestsOnly
+            Action:
+              - 's3:*'
+            Effect: Deny
+            Resource:
+              - !Sub 'arn:aws:s3:::${CellSetsBucket}/*'
+            Principal: '*'
+            Condition:
+              Bool:
+                'aws:SecureTransport': 'false'
   WorkerResultsBucket:
     Type: AWS::S3::Bucket
+    DeletionPolicy: Retain
     Properties:
       BucketName: !Sub "worker-results-${Environment}-${AWS::AccountId}"
       PublicAccessBlockConfiguration:
@@ -72,7 +110,7 @@ Resources:
       BucketEncryption:
         ServerSideEncryptionConfiguration:
           - ServerSideEncryptionByDefault:
-              SSEAlgorithm: 'aws:kms'
+              SSEAlgorithm: "aws:kms"
             BucketKeyEnabled: true
       LifecycleConfiguration:
         Rules:
@@ -88,7 +126,7 @@ Resources:
       CorsConfiguration:
         CorsRules:
           - AllowedHeaders:
-              - '*'
+              - "*"
             ExposedHeaders:
               - ETag
               - "x-amz-server-side-encryption"
@@ -100,11 +138,29 @@ Resources:
               - POST
               - DELETE
             AllowedOrigins:
-              - '*'
+              - "*"
             Id: uiHeadersRule
-
+  WorkerResultsBucketPolicy:
+    Type: 'AWS::S3::BucketPolicy'
+    Properties:
+      Bucket: !Ref WorkerResultsBucket
+      PolicyDocument:
+        Id: SslOnlyAccess
+        Version: '2012-10-17'
+        Statement:
+          - Sid: AllowSSLRequestsOnly
+            Action:
+              - 's3:*'
+            Effect: Deny
+            Resource:
+              - !Sub 'arn:aws:s3:::${WorkerResultsBucket}/*'
+            Principal: '*'
+            Condition:
+              Bool:
+                'aws:SecureTransport': 'false'
   PipelineResultBucket:
     Type: AWS::S3::Bucket
+    DeletionPolicy: Retain
     Properties:
       BucketName: !Sub "processed-matrix-${Environment}-${AWS::AccountId}"
       PublicAccessBlockConfiguration:
@@ -115,7 +171,7 @@ Resources:
       BucketEncryption:
         ServerSideEncryptionConfiguration:
           - ServerSideEncryptionByDefault:
-              SSEAlgorithm: 'aws:kms'
+              SSEAlgorithm: "aws:kms"
             BucketKeyEnabled: true
       VersioningConfiguration:
         Status: Enabled
@@ -126,11 +182,29 @@ Resources:
           - Id: PreserveThenDeleteNonCurrentVersion
             Status: "Enabled"
             NoncurrentVersionExpirationInDays: 7
-
+  PipelineResultBucketPolicy:
+    Type: 'AWS::S3::BucketPolicy'
+    Properties:
+      Bucket: !Ref PipelineResultBucket
+      PolicyDocument:
+        Id: SslOnlyAccess
+        Version: '2012-10-17'
+        Statement:
+          - Sid: AllowSSLRequestsOnly
+            Action:
+              - 's3:*'
+            Effect: Deny
+            Resource:
+              - !Sub 'arn:aws:s3:::${PipelineResultBucket}/*'
+            Principal: '*'
+            Condition:
+              Bool:
+                'aws:SecureTransport': 'false'
   # Stores, for each experiment and timestamp, the log and dump files for errors from the pipeline
   # Indexed by experimentId and timestamp
   PipelineDebugBucket:
     Type: AWS::S3::Bucket
+    DeletionPolicy: Retain
     Properties:
       BucketName: !Sub "biomage-pipeline-debug-${Environment}-${AWS::AccountId}"
       PublicAccessBlockConfiguration:
@@ -141,17 +215,35 @@ Resources:
       BucketEncryption:
         ServerSideEncryptionConfiguration:
           - ServerSideEncryptionByDefault:
-              SSEAlgorithm: 'aws:kms'
+              SSEAlgorithm: "aws:kms"
             BucketKeyEnabled: true
       LifecycleConfiguration:
         Rules:
-        - Id: DeleteObjectAfter10Days
-          Status: Enabled
-          ExpirationInDays: 10
-
+          - Id: DeleteObjectAfter10Days
+            Status: Enabled
+            ExpirationInDays: 10
+  PipelineDebugBucketPolicy:
+    Type: 'AWS::S3::BucketPolicy'
+    Properties:
+      Bucket: !Ref PipelineDebugBucket
+      PolicyDocument:
+        Id: SslOnlyAccess
+        Version: '2012-10-17'
+        Statement:
+          - Sid: AllowSSLRequestsOnly
+            Action:
+              - 's3:*'
+            Effect: Deny
+            Resource:
+              - !Sub 'arn:aws:s3:::${PipelineDebugBucket}/*'
+            Principal: '*'
+            Condition:
+              Bool:
+                'aws:SecureTransport': 'false'
   # The bucket that contains the count matrix files (in .rds format) used for the experiments.
   SourceBucket:
     Type: AWS::S3::Bucket
+    DeletionPolicy: Retain
     Properties:
       BucketName: !Sub "biomage-source-${Environment}-${AWS::AccountId}"
       PublicAccessBlockConfiguration:
@@ -162,7 +254,7 @@ Resources:
       BucketEncryption:
         ServerSideEncryptionConfiguration:
           - ServerSideEncryptionByDefault:
-              SSEAlgorithm: 'aws:kms'
+              SSEAlgorithm: "aws:kms"
             BucketKeyEnabled: true
       VersioningConfiguration:
         Status: "Enabled"
@@ -173,11 +265,29 @@ Resources:
           - Id: PreserveThenDeleteNonCurrentVersion
             Status: "Enabled"
             NoncurrentVersionExpirationInDays: 5
-
+  SourceBucketPolicy:
+    Type: 'AWS::S3::BucketPolicy'
+    Properties:
+      Bucket: !Ref SourceBucket
+      PolicyDocument:
+        Id: SslOnlyAccess
+        Version: '2012-10-17'
+        Statement:
+          - Sid: AllowSSLRequestsOnly
+            Action:
+              - 's3:*'
+            Effect: Deny
+            Resource:
+              - !Sub 'arn:aws:s3:::${SourceBucket}/*'
+            Principal: '*'
+            Condition:
+              Bool:
+                'aws:SecureTransport': 'false'
   # Stores, for each experiment, the cellIds that were preserved after each filter step of the latest qc run
   # Indexed by experimentId
   FilteredCellsBucket:
     Type: AWS::S3::Bucket
+    DeletionPolicy: Retain
     Properties:
       BucketName: !Sub "biomage-filtered-cells-${Environment}-${AWS::AccountId}"
       PublicAccessBlockConfiguration:
@@ -188,7 +298,7 @@ Resources:
       BucketEncryption:
         ServerSideEncryptionConfiguration:
           - ServerSideEncryptionByDefault:
-              SSEAlgorithm: 'aws:kms'
+              SSEAlgorithm: "aws:kms"
             BucketKeyEnabled: true
       VersioningConfiguration:
         Status: Enabled
@@ -199,9 +309,27 @@ Resources:
           - Id: PreserveThenDeleteNonCurrentVersion
             Status: "Enabled"
             NoncurrentVersionExpirationInDays: 7
-
+  FilteredCellsBucketPolicy:
+    Type: 'AWS::S3::BucketPolicy'
+    Properties:
+      Bucket: !Ref FilteredCellsBucket
+      PolicyDocument:
+        Id: SslOnlyAccess
+        Version: '2012-10-17'
+        Statement:
+          - Sid: AllowSSLRequestsOnly
+            Action:
+              - 's3:*'
+            Effect: Deny
+            Resource:
+              - !Sub 'arn:aws:s3:::${FilteredCellsBucket}/*'
+            Principal: '*'
+            Condition:
+              Bool:
+                'aws:SecureTransport': 'false'
   BackupsBucket:
     Type: AWS::S3::Bucket
+    DeletionPolicy: Retain
     Properties:
       BucketName: !Sub "biomage-backups-${Environment}-${AWS::AccountId}"
       PublicAccessBlockConfiguration:
@@ -212,7 +340,7 @@ Resources:
       BucketEncryption:
         ServerSideEncryptionConfiguration:
           - ServerSideEncryptionByDefault:
-              SSEAlgorithm: 'aws:kms'
+              SSEAlgorithm: "aws:kms"
             BucketKeyEnabled: true
       VersioningConfiguration:
         Status: "Enabled"
@@ -226,10 +354,28 @@ Resources:
           - Id: BackupRetentionDays
             Status: "Enabled"
             ExpirationInDays: 90
-
+  BackupsBucketPolicy:
+    Type: 'AWS::S3::BucketPolicy'
+    Properties:
+      Bucket: !Ref BackupsBucket
+      PolicyDocument:
+        Id: SslOnlyAccess
+        Version: '2012-10-17'
+        Statement:
+          - Sid: AllowSSLRequestsOnly
+            Action:
+              - 's3:*'
+            Effect: Deny
+            Resource:
+              - !Sub 'arn:aws:s3:::${BackupsBucket}/*'
+            Principal: '*'
+            Condition:
+              Bool:
+                'aws:SecureTransport': 'false'
   # The bucket that contains the unfiltered versions of the count matrix files as uploaded by the user.
   OriginalFilesBucket:
     Type: AWS::S3::Bucket
+    DeletionPolicy: Retain
     Properties:
       BucketName: !Sub "biomage-originals-${Environment}-${AWS::AccountId}"
       PublicAccessBlockConfiguration:
@@ -240,7 +386,7 @@ Resources:
       BucketEncryption:
         ServerSideEncryptionConfiguration:
           - ServerSideEncryptionByDefault:
-              SSEAlgorithm: 'aws:kms'
+              SSEAlgorithm: "aws:kms"
             BucketKeyEnabled: true
       VersioningConfiguration:
         Status: "Enabled"
@@ -254,7 +400,7 @@ Resources:
       CorsConfiguration:
         CorsRules:
           - AllowedHeaders:
-              - '*'
+              - "*"
             ExposedHeaders:
               - ETag
               - "x-amz-server-side-encryption"
@@ -266,6 +412,23 @@ Resources:
               - POST
               - DELETE
             AllowedOrigins:
-              - '*'
+              - "*"
             Id: uiHeadersRule
-            
+  OriginalFilesBucketPolicy:
+    Type: 'AWS::S3::BucketPolicy'
+    Properties:
+      Bucket: !Ref OriginalFilesBucket
+      PolicyDocument:
+        Id: SslOnlyAccess
+        Version: '2012-10-17'
+        Statement:
+          - Sid: AllowSSLRequestsOnly
+            Action:
+              - 's3:*'
+            Effect: Deny
+            Resource:
+              - !Sub 'arn:aws:s3:::${OriginalFilesBucket}/*'
+            Principal: '*'
+            Condition:
+              Bool:
+                'aws:SecureTransport': 'false'            
